fix npm username

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "webpack"
   },
   "author": {
-    "name": "Marouen Mhiri",
+    "name": "marujah",
     "email": "marujah@gmail.com"
   },
   "devDependencies": {
