rename react component

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-awesome-table",
+  "name": "react-interactive-table",
   "version": "0.0.1",
   "description": "A completely customizable React Table with search and sort options",
   "main": "build/index.js",
