--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "react": "^16.2.0"
   },
   "dependencies": {
-    "react": "^16.2.0",
-    "webpack": "^3.0.0"
+    "react": "^16.13.1",
+    "webpack": "^4.43.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -31,14 +31,15 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.5.1",
-    "css-loader": "^0.28.11",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^3.5.2",
     "file-loader": "^1.1.11",
-    "prop-types": "^15.6.1",
+    "prop-types": "^15.7.2",
     "style-loader": "^0.20.3",
-    "var": "^0.3.2"
+    "var": "^0.3.2",
+    "webpack-cli": "^3.3.11"
   }
 }
